--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,14 @@ const posts = (await getCollection('blog')).sort((a: BlogPost, b: BlogPost) => b
         <h1 class="text-4xl font-bold mb-4">Hi There 👋, Dhanush Kumar! </h1>
         <Prose>
           <div class="text-lg">
-            <p>I am a Front-end Engineer from Indonesia. I love sharing what i know on <a href="https://devaradise.com" target="_blank">devaradise.com</a>, and sometime i also share freebies like this. I'm also active on <a href="https://dev.to/syakirurahman" target="_blank">dev.to</a> and <a href="https://x.com/syakirurahman" target="_blank">twitter</a>.</p>
-            <p>I made Devolio to help you easily set up your own blog and portfolio website. It's a static site built with Astro and Tailwind CSS, and you can deploy it on platforms like <a href="https://app.netlify.com/start/deploy?repository=https://github.com/devaradise/devolio" target="_blank" rel="nofollow noopener">Netlify</a>, <a href="https://vercel.com/new/clone?repository-url=https%3A%2F%2Fgithub.com%2Fdevaradise%2Fdevolio" target="_blank" rel="nofollow noopener">Vercel</a>, or <a href="https://pages.cloudflare.com/" target="_blank" rel="nofollow noopener">Cloudflare Pages</a>.</p>  
+            <p>I'm a passionate software developer from India, specializing in efficient and high-performance software development 
+              from scratch. I enjoy researching, building scalable APIs and web servers, and sharing my knowledge on <a href="https://dev.to/dev-dhanushkumar" target="_blank">dev.to</a>  and 
+              <a href="https://stackoverflow.com/users/23688025/dev-dhanushkumar" target="_blank">stack overflow</a>. 
+            </p>
+            <p>Proficient in Rust, Java, Golang, and JavaScript, I focus on writing optimized and secure code that 
+              enhances system performance. I also have expertise in Docker, Kubernetes, and DevOps, enabling me to build scalable, 
+              secure, and optimized applications.
+            </p>  
           </div>
         </Prose>
       </div>
