Changing Author name

--- a/src/components/widgets/AboutTheAuthor.astro
+++ b/src/components/widgets/AboutTheAuthor.astro
@@ -8,13 +8,10 @@ import Author from '../Author.astro';
 	<h3 class='font-extrabold uppercase mb-4 text-sm'>About the Author</h3>
 	<Author picSize='md' />
 	<div class='author-desc text-[.825rem] my-4'>
-		<p class='mb-3'>
-			Syakir (Sha·keer) is a Front-end Engineer with experiences building SaaS and enterprise level products. He is actively writing on{
-				' '
-			}
-			<a href='https://devaradise.com' target='_blank' class="underline">Devaradise.com</a>
-		</p>
-		<p>He will be happy to work and collaborate in any project as a Front-end engineer. His main stacks are React and Vue 3.</p>
+		<p>I'm a passionate software developer from India, specializing in efficient and high-performance software development 
+			from scratch. I enjoy researching, building scalable APIs and web servers, and sharing my knowledge on <a href="https://dev.to/dev-dhanushkumar" target="_blank">dev.to</a>  and 
+			<a href="https://stackoverflow.com/users/23688025/dev-dhanushkumar" target="_blank">stack overflow</a>. 
+		  </p>
 	</div>
 </div>
 
