--- a/src/layouts/components/Footer.astro
+++ b/src/layouts/components/Footer.astro
@@ -2,17 +2,11 @@
 const today = new Date();
 ---
 
-<!-- <footer class='container mt-8'>
-  <div class="justify-center flex gap-4 py-8 prose dark:prose-invert text-sm">
-    <a href="#">Newsletter</a>
-    <a href="#">Buy me a Coffee</a>
-    <a href="#">RSS</a>
-  </div>
-
+<footer class='container mt-8'>
 	<div class='py-4 border-t dark:border-t-zinc-700'>
     <div class="md:flex text-sm text-zinc-500 dark:text-zinc-300 prose dark:prose-invert justify-between">
-      <div>Copyright © {today.getFullYear()} Devolio.</div>
-      <div>Template created by <a href="https://devaradise.com" target="_blank" rel="nofollow noopener">Syakir @ Devaradise</a></div>
+      <div>Copyright © {today.getFullYear()} Dev-Dhanushkumar</div>
+      <div>Portfolio created by <a href="https://github.com/dev-dhanushkumar/dev-dhanushkumar.github.io.git" target="_blank" rel="nofollow noopener">Dhanush Kumar</a></div>
     </div>
 	</div>
-</footer> -->
+</footer>
